# Neko_opengl

./: CMakeLists.txt  CMakeLists2.txt  main.cpp
assets/models/: beta.mtl  beta2.mtl  beta2.skel.json
assets/shaders/fragment/: default_models.frag
assets/shaders/textures/fragment/: default_texture.frag
src/: Controller.cpp  Controller.h
src/AI/: AIModel.cpp  AIModel.h
src/Graphics/: Window.cpp  Window.h
src/Graphics/Buffers/: BO.cpp  BO.h  FrameBuffer.cpp  FrameBuffer.h
src/Graphics/Math/: BoundingBox.cpp  BoundingBox.h  Functionality.cpp  Functionality.h  Structs.h
src/Graphics/Objects/Loaders/: BALoaders.cpp  BALoaders.h  ObjLoader.cpp  ObjLoader.h
src/Graphics/Objects/Materials/: Material.cpp  Material.h
src/Graphics/Objects/gl2D/: Texture.cpp  Texture.h  TextureUVMap.cpp  TextureUVMap.h
src/Graphics/Objects/gl3D/: BaseModel.cpp  BaseModel.h  ModelBuilder.cpp  ModelBuilder.h
src/Graphics/Objects/gl3D/Animations/: AnimationController.cpp  AnimationController.h  BoneAnimation.cpp  BoneAnimation.h
src/Graphics/Objects/gl3D/Camera/: PerspectiveCamera.cpp  PerspectiveCamera.h
src/Graphics/Objects/gl3D/Flat/: FlatModels.cpp  FlatModels.h
src/Graphics/Objects/gl3D/Lights/: DiffusionLight.cpp  DiffusionLight.h
src/Graphics/Objects/gl3D/Model/Bones/: Bone.cpp  Bone.h  Skeleton.cpp  Skeleton.h
src/Graphics/Objects/gl3D/Model/Model3D/: HumaModel.cpp  HumaModel.h  Model.cpp  Model.h
src/Graphics/Scene/: Application.cpp  GraphicsClass.cpp  GraphicsClass.h  Scene.cpp  Scene.h
src/Graphics/Shaders/: ShaderProgram.cpp  ShaderProgram.h
src/Workers/: Application.h  GraphicsClass.cpp  GraphicsClass.h
